# AgentsLeak

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agentsleak/: __init__.py  __main__.py  server.py
agentsleak/api/: __init__.py  alerts.py  events.py  graph.py  policies.py  sessions.py  stats.py  websocket.py
agentsleak/collector/: __init__.py  routes.py
agentsleak/config/: __init__.py  default_rules.json  policy_seeder.py  settings.py
agentsleak/engine/: __init__.py  classifier.py  processor.py  sequence.py
agentsleak/models/: __init__.py  alerts.py  events.py  graph.py
agentsleak/store/: __init__.py  database.py  schema.py
dashboard/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx  router.tsx
dashboard/src/api/: client.ts  index.ts  queries.ts  types.ts  websocket.ts
dashboard/src/components/: ErrorBoundary.tsx
dashboard/src/hooks/: index.ts  useLiveEvents.ts  useWebSocket.ts
dashboard/src/lib/: useDarkMode.ts
dashboard/src/pages/: Alerts.tsx  Analytics.tsx  Dashboard.tsx  Graph.tsx  LiveFeed.tsx  Policies.tsx  SessionDetail.tsx  Sessions.tsx
docs/: ARCHITECTURE.md  TESTING.md  THREAT_MODEL.md
hooks/: common.sh  config.example  cursor-hook.sh  install-cursor.sh  install.sh  permission-request.sh  post-tool-use-error.sh  post-tool-use.sh  pre-tool-use.sh  session-end.sh  session-start.sh  subagent-start.sh  subagent-stop.sh  uninstall-cursor.sh  uninstall.sh  user-prompt-submit.sh
scripts/: demo.sh  start.sh
tests/: conftest.py  test_blocking.py  test_classifier.py  test_enrichment.py  test_policy_matching.py  test_risk_scoring.py  test_sequence.py
(+30 files in other folders)
