[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentsleak"
version = "0.1.0"
description = "AI agent security monitoring"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "AgentsLeak Team" }
]
keywords = ["ai", "agents", "security", "runtime", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "python-dateutil>=2.8.2",
    "anthropic>=0.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
agentsleak = "agentsleak.__main__:main"

[project.urls]
Homepage = "https://github.com/IngaCherny/AgentsLeak"
Documentation = "https://github.com/IngaCherny/AgentsLeak#readme"
Repository = "https://github.com/IngaCherny/AgentsLeak"

[tool.hatch.build.targets.wheel]
packages = ["agentsleak"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
